[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xa-toolkit"
version = "0.1.0a0"
description = "Disassembler, emulator and tracer for the Philips/NXP 80C51XA (XA-G3) 16-bit MCU — with LLM/agent integration."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "MikeVance" }]
keywords = ["80C51XA", "XA-G3", "philips", "nxp", "disassembler", "reverse-engineering", "8051", "firmware"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Disassemblers",
]
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=7"]

[project.scripts]
xa = "xa_toolkit.cli:main"

[project.urls]
Homepage = "https://github.com/MikeVances/xa-toolkit"
Issues = "https://github.com/MikeVances/xa-toolkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["xa_toolkit"]
